--- a/templates/page.home.liquid
+++ b/templates/page.home.liquid
@@ -2,8 +2,7 @@
   <div class="grid">
     <div class="grid__item medium-up--five-sixths medium-up--push-one-twelfth">
       <div class="section-header text-center">
-        <h1>AFLAME.TO</h1>
-        <p>coming soon</p>
+        <p>In the making.</p>
       </div>
 
       <div class="rte">
