--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -11,6 +11,11 @@
   <link rel="preconnect" href="https://fonts.shopify.com" crossorigin>
   <link rel="preconnect" href="https://monorail-edge.shopifysvc.com">
 
+  {% comment %} NEW {% endcomment %}
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,100&display=swap" rel="stylesheet">
+
   {%- assign header_font = settings.type_header_font -%}
   {%- assign base_font = settings.type_base_font -%}
   {%- assign base_font_bolder = base_font | font_modify: 'weight', 'bolder' -%}
@@ -28,7 +33,10 @@
   {% endif %}
 
   <title>
-    {{ shop.name }} &ndash; {{ 'general.password_page.opening_soon' | t }}
+    {% comment %} {{ shop.name }} &ndash; {{ 'general.password_page.opening_soon' | t }} {% endcomment %}
+
+    <img src="assets/title.png" alt="aflame.to">
+
   </title>
 
   {% if page_description %}
